data/derived/comb/progs/unify/prog5920.ml.out
Characters 106-109:
  | h::t -> [h*i] @ mulByDigit (t);;
                               ^^^
Error: This expression has type int list
       but an expression was expected of type int
